2004-03-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_signals.defs: Added the new RadioMenuItem::group_changed
	signal.

2004-03-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooser.hg: set_current_folder(), 
	set_current_folder_uri(), select_filename(), select_uri(), 
	set_filename(), and set_uri() now return bools, because GTK+ now
	does this.

2004-03-06  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: regenerated.
	* gtk/src/gtk_docs.xml: regenerated.

2004-03-05  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
 	* added missing documentation to gtk/src/expander.hg,
 	gtk/src/filechooserwidget.hg, gtk/src/fontbutton.hg,
 	gtk/src/imagemenuitem.hg, gtk/src/radiotoolbutton.hg. Mainly
 	class documentation, some non-Gtk+ function and some constructors.
 
2004-03-05  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
 	* gtk/src/colorbutton.hg: added missing documentation to some functions.

2004-03-05  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/radiobutton.hg, radiomenuitem.hg: Wrap the group_changed
	signals now that they are corrected in GTK+.
	* gtk/src/filechooser.hg: Correct the set_local_only() parametre name
	to match the one in GTK+, as spotted by Matthew Walton.

2.3.5:

2004-03-03  Bryan Forbes  <mxpxfifws@yahoo.com>

	* gtk/src/toolbar.[hg|ccg]: added methods to append, prepend, and 
	insert with a sigc::slot.
	* examples/stock/stock.cc: use new append method to append with a slot;
	added a toggle button to prove that there are no ambiguity problems 
	with the new methods.

2004-03-02  Bryan Forbes  <mxpxfifws@yahoo.com>

	* gtk/src/toolbar.[hg|ccg]: removed old STL-stlye API (deprecated and 
	can't co-exist with new API).
	* gtk/gtkmm/toolbar_elements.[h|cc]: removed these files to get rid of 
	all old API for Gtk::Toolbar.
	* gtk/gtkmm/Makefile.am: removed toolbar_elements.[h|cc] from list of 
	files to build, because it is only needed by the old STL-style Toolbar
	API.
