@@ -7,4 +7,5 @@ gtkmm-reference-html.tar.bz2
 gtkmm_doxygen_tags
 gtkmm-2.4.devhelp
 xml
+doxygen-output.txt
 doxygen-warnings.txt
