@@ -1,3 +1,7 @@
+2004-04-06  Hagen Moebius  <hagen.moebius@starschiffchen.de>
+	* modified docs/reference/Makefile.am to support a more general output
+	of doxygen warnings/errors.
+
 2004-03-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_signals.defs: Added the new RadioMenuItem::group_changed
